// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeView _updateNotes 1`] = `
[
  {
    "caption": "Todos",
    "id": 0,
    "type": "todos",
  },
  {
    "caption": "Snippets",
    "id": 1,
    "type": "snippets",
  },
  {
    "caption": "Notes",
    "id": 2,
    "type": "notes",
  },
]
`;

exports[`TreeView _updateNotes 2`] = `
[
  {
    "workspaceId": "123",
  },
  {
    "workspaceId": "321",
  },
]
`;

exports[`TreeView _updateSnippets 1`] = `
[
  {
    "caption": "Todos",
    "id": 0,
    "type": "todos",
  },
  {
    "caption": "Snippets",
    "id": 1,
    "type": "snippets",
  },
  {
    "caption": "Notes",
    "id": 2,
    "type": "notes",
  },
]
`;

exports[`TreeView _updateSnippets 2`] = `
[
  {
    "workspaceId": "123",
  },
  {
    "workspaceId": "321",
  },
]
`;

exports[`TreeView _updateTodos 1`] = `
[
  {
    "caption": "Todo [global] (0 open / 2 closed)",
    "id": 0,
    "type": "todos",
  },
  {
    "caption": "Clipboard",
    "id": 1,
    "type": "snippets",
  },
  {
    "caption": "Notes",
    "id": 2,
    "type": "notes",
  },
]
`;

exports[`TreeView _updateTodos 2`] = `
[
  {
    "workspaceId": "123",
  },
  {
    "workspaceId": "321",
  },
]
`;

exports[`TreeView clearTree 1`] = `
{
  "notes": [],
  "snippets": [],
  "todos": [],
}
`;

exports[`TreeView getChildren 1`] = `
[
  Item {
    "archived": undefined,
    "basePath": "/foo/bar",
    "checked": undefined,
    "collapsibleState": "foo",
    "command": undefined,
    "contextValue": "todosHeadline",
    "id": "0",
    "isTreeItem": true,
    "label": "Todos",
    "type": "todos",
  },
  Item {
    "archived": undefined,
    "basePath": "/foo/bar",
    "checked": undefined,
    "collapsibleState": "foo",
    "command": undefined,
    "contextValue": "snippetsHeadline",
    "id": "1",
    "isTreeItem": true,
    "label": "Snippets",
    "type": "snippets",
  },
  Item {
    "archived": undefined,
    "basePath": "/foo/bar",
    "checked": undefined,
    "collapsibleState": "foo",
    "command": undefined,
    "contextValue": "notesHeadline",
    "id": "2",
    "isTreeItem": true,
    "label": "Notes",
    "type": "notes",
  },
]
`;

exports[`TreeView getChildren 2`] = `
[
  TodoItem {
    "archived": undefined,
    "basePath": "/foo/bar",
    "checked": undefined,
    "collapsibleState": undefined,
    "command": {
      "command": "marquee.todo.addEmpty",
      "title": "Add new todo",
    },
    "contextValue": "AddNew",
    "iconPath": {
      "dark": "/foo/bar/assets/add-light.svg",
      "light": "/foo/bar/assets/add-dark.svg",
    },
    "id": "addtodos",
    "isTreeItem": true,
    "item": {},
    "label": "Add new todo",
    "type": "AddNew",
  },
]
`;

exports[`TreeView getChildren 3`] = `
[
  SnippetItem {
    "archived": undefined,
    "basePath": "/foo/bar",
    "checked": undefined,
    "collapsibleState": undefined,
    "command": {
      "command": "marquee.snippet.addEmpty",
      "title": "Add New Clipboard Item",
    },
    "contextValue": "AddNew",
    "empty": true,
    "iconPath": {
      "dark": "/foo/bar/assets/add-light.svg",
      "light": "/foo/bar/assets/add-dark.svg",
    },
    "id": "addItemSnippet",
    "isTreeItem": true,
    "item": {},
    "label": "Add New Clipboard Item",
    "type": "AddNew",
  },
]
`;

exports[`TreeView getChildren 4`] = `
[
  NoteItem {
    "archived": undefined,
    "basePath": "/foo/bar",
    "checked": undefined,
    "collapsibleState": undefined,
    "command": {
      "command": "marquee.note.addEmpty",
      "title": "Add new note",
    },
    "contextValue": "AddNew",
    "empty": true,
    "iconPath": {
      "dark": "/foo/bar/assets/add-light.svg",
      "light": "/foo/bar/assets/add-dark.svg",
    },
    "id": "addItemNote",
    "isTreeItem": true,
    "item": {},
    "label": "Add new note",
    "type": "AddNew",
  },
]
`;
